# modexia-mcp

./: .env  .gitignore  CHANGELOG.md  LICENSE  README.md  claude_desktop_config.json  glama.json  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: modexia_context.md
mcp-server/: README.md  claude_desktop_config.json  pyproject.toml  server.py  test_history.py  test_history2.py
mcp-server/docs/: modexia_context.md
modexia_mcp/: __init__.py  modexia_context.md
modexia_mcp/prompts/: create_intent_payment_instruction.md  create_payment_instruction.md  nanopay_usage_instruction.md  setup_microtransactions_instruction.md
prompts/: prompts.md
