[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modexia-mcp"
version = "0.4.0"
description = "Official Modexia AgentPay MCP Server"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "modexiaagentpay>=0.7.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
authors = [
    { name = "Modexia", email = "modaniels@modexia.software" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://modexia.software"
Repository = "https://github.com/Modexia/ModexiaAgentpay"
Documentation = "https://modexia.software/docs"

[project.scripts]
modexia-mcp = "modexia_mcp:main"

[tool.hatch.build.targets.wheel.force-include]
"modexia_mcp/modexia_context.md" = "modexia_mcp/modexia_context.md"
"modexia_mcp/prompts" = "modexia_mcp/prompts"
